# AGI-model

./: .dockerignore  .env.example  .gitignore  .trivyignore  ADVANCED_QUANTUM_CONSCIOUSNESS_FEATURES.md  AGENT_PLANNING_MODE.md  AGI_TRAINING_SYSTEM_SUMMARY.md  ARXIV_PREPRINT_DRAFT.md  BACKEND_CALIBRATION_ANALYSIS.md  BREAKTHROUGH_FEB1.md  CALIBRATION_REPORT_v2.0.md  CHANGELOG.md  COMPLETE_PIPELINE.md  COMPREHENSIVE_PROJECT_OVERVIEW_FEB1_2026.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_PLAN.md  Dockerfile  Dockerfile.dashboard  Dockerfile.pyscf  FINAL_IMPLEMENTATION_SUMMARY.md  GITHUB_VS_LOCAL_COMPARISON_FEB1_2026.md  GIT_RELEASE_SUMMARY_v1.0.0.md  IBM_ENHANCED_MANUAL_EXECUTION.md  IBM_QUANTUM_CONFIG.md  IMMEDIATE_ACTIONS_FEB1.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_STEPS_IMPLEMENTATION_COMPLETE_FEB1_2026.md  PROFESSIONAL_ENHANCEMENT_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  QUANTUM_CONSCIOUSNESS_ADVANCEMENT_SUMMARY.md  QUANTUM_TELEPORTATION_JOB_REPORT.md  README.md  README_PROMOTER_PANEL.md  README_REPLICATE_SCHEDULER.md  README_TMT_OS_PROMOTERS.md  RELEASE_NOTES_v1.0.0.md  SECURITY_HARDENING.md  SECURITY_PRIVACY.md  STATISTICAL_VALIDATION_SUMMARY_FEB1_2026.md  (+168 more)
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml  settings.yml
AGI_EXPERIMENT_20260310/: FORENSIC_REVIEW_MEMO.md  README.md  dna_agent_report_20260310_210905.json  phi_agent_report_20260310_231439.json  qnn_agent_report_20260310_231452.json
TMT-OS/: __init__.py  node1_base_os.py  node2_cybershield.py  node4_nft_layer.py  (+1 more)
TMT-OS-Labs-Portal/: setup_portal.py
(+492 files in other folders)
