[tool.poetry]
name = "quantum-consciousness-agi"
version = "0.1.0"
description = "Experimental research platform for a quantum-inspired VAE, analysis workflows, and TMT-OS integrations"
authors = ["GitHub Copilot <copilot@example.com>"]
readme = "README.md"
homepage = "https://github.com/quantumdynamics927-dotcom/AGI-model"
repository = "https://github.com/quantumdynamics927-dotcom/AGI-model"
documentation = "https://github.com/quantumdynamics927-dotcom/AGI-model/tree/main/docs"
keywords = ["quantum", "vae", "pytorch", "research", "tmt-os"]
packages = [
    { include = "packages" },
    { include = "agi_model" },
    { include = "vae_model.py" },
    { include = "ollama_cloud_models.py" },
]

[tool.poetry.dependencies]
python = ">=3.10"
torch = "^2.0"
numpy = "^1.25"
matplotlib = "^3.8"
scipy = "^1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
